# ImmoWeb

./: ImmoWeb.py  Pipfile  README.md  classified_map_table.json  config.json  immoweb_scraper.py  immoweb_scraper_test.py  pyproject.toml  requirements.txt  sub_types.json
classifieds/: 8908093.html  9081694.html  9081741.html  9084287.html
config/: classified_map_table.json  config.json  sub_types.json
test/: search_soup.html
