[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]

[tool]
[tool.poetry]
authors = ["Loetheri <coomans.geo.xav@gmail.com>"]
description = ""
name = "immoweb"
version = "0.1.0"
[tool.poetry.dependencies]
python = "^3.7"
bs4 = "^0.0.1"
requests = "^2.23"
[tool.poetry.dev-dependencies]
